--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,11 @@
     </header>
     <main>
         <h1> THIS IS THE CONTACT PAGE</h1>
+
+
+        <H1> So you want to hire me!</H1>
+        <h2>Contact via email is always best!</h2>
+        <h2>ThomasBoyd@me.com</h2>
     </main>
     <script src="js.js"></script>
 </body>
