--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="transition transition-4 is-active"></div>
     <header>
         <nav>
             <div id="dlswitcher">
@@ -49,7 +50,7 @@
         </nav>
     </header>
     <main>
-        <h1> THIS IS THE CONTACT PAGE</h1>
+        <h1> Contact Info </h1>
 
 
         <H1> So you want to hire me!</H1>
