--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="transition transition-3 is-active"></div>
     <header>
         <nav>
             <div id="dlswitcher">
