--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="transition transition-1 is-active"></div>
     <header>
         <nav>
             <div id="dlswitcher">
