--- a/project.html
+++ b/project.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="transition transition-2 is-active"></div>
     <header>
         <nav>
             <div id="dlswitcher">
