Start to About Me Page
Started the about me page. added photos/logos. mostly temporary filler.

--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,13 @@
         </nav>
     </header>
     <main>
-        <h1> THIS IS THE ABOUT ME PAGE</h1>
+        <h1> I am Thomas.</h1>
+        <img src=".//Images/Waterfall.jpeg" alt="">
+        <p>I am currently working towards becoming a front-end web developer. I have spent most of my life in different avenues for my career. I have experience in retail management, manufactoring and mental health.
+        </p>
+        <a href="https://www.kennesaw.edu/"><img src=".//Images/KennesawState.png" class="logo" alt="Kennesaw State Logo"></a>
+        <a href="https://www.walden.edu/"> <img src=".//Images/WaldenUniversity.jpeg" class="logo" alt=""></a>
+        <p>I hold a Bachelor's of Science in Psychology from Kennesaw State University and a Master's of Science in Psychology from Walden University </p>
     </main>
     <script src="js.js"></script>
 </body>
