Made minor CSS adjustments
removed "social" links and replaced with page menu items.

made minor changes to page transition to attempt to fix delay between load.

--- a/index.html
+++ b/index.html
@@ -32,21 +32,16 @@
             <!-- Links will be hidden in mobile view -->
             
             <div id="links">
-                <img src="Images/github.png" class="link-images" alt="">
-                <a href="#">Github</a>
-                <img src="Images/linkedin.png" class="link-images" alt="">
-                <a href="#">Linkedin</a>
-                <img src="Images/netlify.png" class="link-images" alt="">
-                <a href="#">Netlify</a>
-                <img src="Images/codepen.png" class="link-images" alt="">
-                <a href="#">Codepen</a>
+                <a href="aboutme.html">About</a>
+                <a href="project.html">Projects</a>
+                <a href="contact.html">Contact</a>
             </div>
             <!-- Mobile Menu -->
             <div class="controls">
                 <img id="menu-hamburger" class="menu-control" src="https://ga-instruction.s3.amazonaws.com/assets/front-end-web-development/fewd-animations-lesson-images/img/hamburger.svg" alt="Hamburger" role="navigation">
             </div>
             <aside class="menu">
-                <a href="aboutme.html">About</a>
+                <a href="aboutme.html">About Me</a>
                 <a href="project.html">Projects</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" id="menu-close">X</a>
@@ -68,7 +63,7 @@
             <p>Do you like what you see and want to see more? Check out <a href="project.html">these</a> nifty projects </p>
         </div>
         <div class="contact">
-            <p>think I am a good fit for your company and want to hire me? contact me <a href="contact.html">here</a></p>
+            <p>Think I am a good fit for your company and want to hire me? contact me <a href="contact.html">here</a></p>
         </div>
     </main>
     <footer id="footer">
