--- a/project.html
+++ b/project.html
@@ -33,8 +33,7 @@
             
             <div id="links">
                 <a href="index.html">Home</a>
-                <a href="aboutme.html">About</a>
-                <a href="project.html">Projects</a>
+                <a href="aboutme.html">About Me</a>
                 <a href="contact.html">Contact</a>
 
             </div>
