--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,8 @@
             
             <div id="links">
                 <a href="index.html">Home</a>
-                <a href="aboutme.html">About</a>
+                <a href="aboutme.html">About Me</a>
                 <a href="project.html">Projects</a>
-                <a href="contact.html">Contact</a>
             </div>
             <!-- Mobile Menu -->
             <div class="controls">
