--- a/aboutme.html
+++ b/aboutme.html
@@ -49,14 +49,53 @@
         </nav>
     </header>
     <main>
-        <h1> I am Thomas.</h1>
+        <section class="intro">
+            <div>
+                <img src="./Images/Waterfall.jpeg" class="intro-photo"alt="">
+            </div>
+            <div>
+                <h1>Hello! I am Thomas!</h1>
+                <p>I am a 31 year old man.</p>
+                <p>I am currently working towards becoming a front-end web developer. I have spent most of my life in different avenues for my career. I have experience in retail management, manufactoring and mental health.
+                </p>
+                <p>I hold a Bachelor's of Science in Psychology from Kennesaw State University and a Master's of Science in Psychology from Walden University. I have completed a front-end web development course from General Assembly. </p>
+                <p></p>
+            </div>
+        </section>
+        <section class="education">
+        <div>
+            <img src="./Images/WaldenUniversity.jpeg" class="edu-logo" alt="">
+        </div>
+        <div>
+            <h1>Education</h1>
+            <ul>
+                <li>Kennesaw State University</li>
+                <li>Walden University</li>
+                <li>General Assembly</li>
+            </ul>
+        </div>
+        <div>
+            <img src="./Images/KennesawState.png" class="edu-logo" alt="">
+        </div>
+        </section>
+        <section>
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
+    <script src="js.js"></script>
+</body>
+</html>
+
+        <!-- <h1> I am Thomas.</h1>
         <img src=".//Images/Waterfall.jpeg" alt="">
         <p>I am currently working towards becoming a front-end web developer. I have spent most of my life in different avenues for my career. I have experience in retail management, manufactoring and mental health.
         </p>
         <a href="https://www.kennesaw.edu/"><img src=".//Images/KennesawState.png" class="logo" alt="Kennesaw State Logo"></a>
         <a href="https://www.walden.edu/"> <img src=".//Images/WaldenUniversity.jpeg" class="logo" alt=""></a>
-        <p>I hold a Bachelor's of Science in Psychology from Kennesaw State University and a Master's of Science in Psychology from Walden University </p>
-    </main>
-    <script src="js.js"></script>
-</body>
-</html>
+         -->
